--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Android LessonOne!</string>
     <string name="helloWorld">Hello World!</string>
     <string name="alarm">Alarm</string>
+    <string name="Equality">Равно?</string>
+    <string name="answer" />
 </resources>
