--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="answer" />
     <string name="alarm">Alarm</string>
     <string name="alarm_on">Alarm on!</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
