--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
     <string name="alarm_on">Alarm on!</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="press_me">Press Me</string>
+    <string name="enter_the_text">Enter the text:</string>
+    <string name="enterDetails"> Please enter your details</string>
+    <string name="name">Name:</string>
+    <string name="number">Number:</string>
+    <string name="age">Age:</string>
+    <string name="number_phone">Number phone:</string>
+    <string name="email">Email:</string>
+    <string name="date">Date:</string>
+    <string name="result">Result</string>
+    <string name="password">Password</string>
 </resources>
